Created Step 1 with functioning next and previous buttons. Enabled Step 1 from Home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">androidAccidentApp</string>
+    <string name="step1Instruction">If you are uninjured, \nand it is safe to do so,\ntake this time to move\nyour vehicle to a safe place\nto wait for police to arrive.</string>
 </resources>
