Step 1 now can make calls (no database information yet) with the given string or 911. Automatically goes back to the application after call. Uses both dial and call. Also fixed the layouts on login and registration not aligning.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">androidAccidentApp</string>
+    <string name="app_name">ASAP</string>
+    <string name="step1Instruction">Select one of the below\ncontact options, or skip to \nthe next step.</string>
 </resources>
