--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ASAP</string>
+    <string name="editLink"><u>Edit</u></string>
     <string name="step1Instruction">Select one of the below\ncontact options, or skip to \nthe next step.</string>
 </resources>
