--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="password">Password</string>
     <string name="register">Register</string>
     <string name="complete">Complete</string>
+    <string name="title_activity_maps">Choose Location</string>
+    <string name="addressDialogTitle">Add address to accident report?</string>
+    <string name="saveAddressButtonText">Save</string>
 </resources>
