--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">ASAP</string>
     <string name="editLink"><u>Edit</u></string>
     <string name="step1Instruction">Select one of the below\ncontact options, or skip to \nthe next step.</string>
+    <string name="sign_in">Sign In</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="register">Register</string>
+    <string name="complete">Complete</string>
+    <string name="title_activity_maps">Choose Location</string>
+    <string name="addressDialogTitle">Add address to accident report?</string>
+    <string name="saveAddressButtonText">Save</string>
 </resources>
