--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="step2thirdString">Once you are safe and out of the way of traffic you should exchange information with the other driver(s).</string>
     <string name="step2fourthString">If you both have accounts you can import both your information and the other driver\'s information directly into the information exchange form.</string>
     <string name="editLink"><u>Edit</u></string>
+    <string name="enterManuallyButtonText">Enter Address Manually</string>
 </resources>
