--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="step2fourthString">If you both have accounts you can import both your information and the other driver\'s information directly into the information exchange form.</string>
     <string name="editLink"><u>Edit</u></string>
     <string name="enterManuallyButtonText">Enter Address Manually</string>
+    <string name="step3TextView1">Once you are safe and out of the way of traffic, you should exchange information with the other driver.</string>
+    <string name="step3TextView3">After, you will be taken to a maps screen where you will enter in your location, which should be the site of the accident</string>
+    <string name="step3TextView2">This step will have you enter in the other driver\'s information that you got into an accident with, and you have the option to import yours from your profile.</string>
+    <string name="step3TextView4">Finally, you will be then taken to the camera where you can document the damage, if any, to the vehicles and save them for the report</string>
 </resources>
